--- a/edenthought/journal/templates/journal/index.html
+++ b/edenthought/journal/templates/journal/index.html
@@ -48,7 +48,7 @@
         
                   <li class="nav-item">
               
-                    <a class="btn btn-primary navbar-btn" type="button"  href="">Register</a>
+                    <a class="btn btn-primary navbar-btn" type="button"  href="{% url 'register' %}">Register</a>
         
                   </li>
         
@@ -77,7 +77,7 @@
             <h2> Edenthought.... A home for your thoughts. </h2>
       
               <br>
-              <a class="btn btn-outline-primary" type="button"  href="">Register</a>
+              <a class="btn btn-outline-primary" type="button"  href="{% url 'register' %}">Register</a>
       
             </div>
       
