--- a/edenthought/journal/templates/journal/index.html
+++ b/edenthought/journal/templates/journal/index.html
@@ -1,12 +1,9 @@
 
- 
-
 <!DOCTYPE html>
 
     <html lang="en">
 
         <head>
-
 
             <meta charset="utf-8" />
 
@@ -17,7 +14,6 @@
 
 
             <link rel="stylesheet" type="text/css" href="">
-
 
         </head>
         <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
@@ -56,7 +52,7 @@
                   
                   <li class="nav-item">
         
-                    <a class="btn btn-primary navbar-btn" type="button"  href="">Login</a>
+                    <a class="btn btn-primary navbar-btn" type="button"  href="{% url 'my-login' %}">Login</a>
         
                   </li>
         
