--- a/edenthought/journal/templates/journal/my-login.html
+++ b/edenthought/journal/templates/journal/my-login.html
@@ -1,11 +1,22 @@
+{% load static %}
+
+{% load crispy_forms_tags %}
+
 
 <html>
 
     <head>
         <title>Edenthought | Login</title>
-    </head>
 
-    <div class="container">
+        <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/morph/bootstrap.min.css">
+
+         <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+
+    </head>
+    <br>
+    <br>
+
+    <div class="container bg-white shadow-md p-5 form-layout">
 
         <h3> Login to your account </h3>
 
@@ -17,14 +28,14 @@
 
             {% csrf_token %}
 
-            {{LoginForm.as_p}}
+            {{LoginForm|crispy}}
 
             <br> <br>
             
-            <button type="submit"> Login </button>
+            <button class="btn btn-secondary btn-md w-100 btn-block p-2" type="submit"> Login </button>
 
         </form>
-
+        <br>
     </div>
 
 </html>
