created inner navbar, added style

--- a/edenthought/journal/templates/journal/dashboard.html
+++ b/edenthought/journal/templates/journal/dashboard.html
@@ -1,6 +1,12 @@
+{% extends "journal/navbar.html" %}
 
-<h1>DASHBOARD</h1>
+{% block content %}
+<br>
 
-<a href='{% url 'user-logout' %}'>Logout here</a>
+<div class="container bg-white shadow-md p-5 form-layout">
+    <h1>DASHBOARD</h1>
 
+    <a href='{% url 'user-logout' %}'>Logout here</a>
+</div>    
 
+{% endblock %}
