--- a/edenthought/journal/templates/journal/my-login.html
+++ b/edenthought/journal/templates/journal/my-login.html
@@ -1,7 +1,5 @@
 {% load static %}
-
 {% load crispy_forms_tags %}
-
 
 <html>
 
@@ -20,24 +18,28 @@
 
         <h3> Login to your account </h3>
 
+        <br>
+        <br>
 
-        <br>
-        <br>
+        {% for message in messages %}
+
+            {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}          
+                <p id="message-timer" class="alert alert-success float-center text-center message-text"> {{message}} </p>
+            {% endif %}
+        {% endfor %}
 
         <form method='POST' autocomplete="off">
-
             {% csrf_token %}
 
             {{LoginForm|crispy}}
 
             <br> <br>
-            
             <button class="btn btn-secondary btn-md w-100 btn-block p-2" type="submit"> Login </button>
 
         </form>
         <br>
     </div>
-
+    <script src="{% static 'js/app.js' %}"></script>
 </html>
 
 
