--- a/edenthought/journal/templates/journal/navbar.html
+++ b/edenthought/journal/templates/journal/navbar.html
@@ -50,7 +50,7 @@
                   
                   <li class="nav-link">
               
-                    <a class="nav-link"  href="">Create thought</a>
+                    <a class="nav-link"  href="{% url 'create-thought' %}">Create thought</a>
         
                   </li>
         
