created read a thought CRUD

--- a/edenthought/journal/templates/journal/dashboard.html
+++ b/edenthought/journal/templates/journal/dashboard.html
@@ -4,8 +4,9 @@
 <br>
 
 <div class="container bg-white shadow-md p-5 form-layout">
-    <h1>DASHBOARD</h1>
-
+    <h1>DASHBOARD</h1> {{user}}
+    <br>
+    <br>
     <a href='{% url 'user-logout' %}'>Logout here</a>
 </div>    
 
