--- a/edenthought/journal/templates/journal/navbar.html
+++ b/edenthought/journal/templates/journal/navbar.html
@@ -57,7 +57,7 @@
                   &nbsp;     &nbsp;     &nbsp; 
                                   <li class="nav-link">
               
-                  <a class="nav-link"  href="">View thoughts</a>
+                  <a class="nav-link"  href="{% url 'my-thoughts' %}">My thoughts</a>
         
                   </li>
         
