created update feature CRUD

--- a/edenthought/journal/templates/journal/my-thoughts.html
+++ b/edenthought/journal/templates/journal/my-thoughts.html
@@ -18,6 +18,10 @@
         <br>
 
         {{thought.user}}
+        <br>
+        <br>
+
+        <a href="{% url 'update-thought' thought.id %}">Update thought</a>
     </div>    
     <br>
    {% endfor %}
