created delete thought CRUD operation

--- a/edenthought/journal/templates/journal/dashboard.html
+++ b/edenthought/journal/templates/journal/dashboard.html
@@ -4,7 +4,7 @@
 <br>
 
 <div class="container bg-white shadow-md p-5 form-layout">
-    <h1>DASHBOARD</h1> {{user}}
+    <h1>DASHBOARD</h1> Welcome back {{user}}
     <br>
     <br>
     <a href='{% url 'user-logout' %}'>Logout here</a>
