--- a/edenthought/journal/templates/journal/my-thoughts.html
+++ b/edenthought/journal/templates/journal/my-thoughts.html
@@ -22,6 +22,9 @@
         <br>
 
         <a href="{% url 'update-thought' thought.id %}">Update thought</a>
+        <br>
+        <br>
+        <a href="{% url 'delete-thought' thought.id %}">Delete thought</a>
     </div>    
     <br>
    {% endfor %}
