created email and username update

--- a/edenthought/journal/templates/journal/navbar.html
+++ b/edenthought/journal/templates/journal/navbar.html
@@ -56,13 +56,18 @@
         
                   &nbsp;     &nbsp;     &nbsp; 
                                   <li class="nav-link">
-              
-                  <a class="nav-link"  href="{% url 'my-thoughts' %}">My thoughts</a>
+                  <li class="nav-link">
+                    <a class="nav-link"  href="{% url 'my-thoughts' %}">My thoughts</a>
         
                   </li>
         
                   &nbsp;     &nbsp;     &nbsp;   
-       
+                
+                  <li class="nav-link">
+              
+                    <a class="nav-link"  href="{% url 'profile-management' %}">Profile-managementt</a>
+        
+                  </li>
                 </ul>
                 
               </div>
