--- a/edenthought/journal/templates/journal/profile-management.html
+++ b/edenthought/journal/templates/journal/profile-management.html
@@ -22,6 +22,13 @@
 </div>    
 
 <br>
+<div class="container bg-white shadow-md p-5 form-layout">
+    <h3> Delete your account</h3>
+    <br>
+    <br>
+
+    <a href="{% url 'delete-account' %}">Proceed to delete your account </a>
+</div>
 
 {% endblock %}
 
