configured django for media upload

--- a/edenthought/journal/templates/journal/navbar.html
+++ b/edenthought/journal/templates/journal/navbar.html
@@ -65,7 +65,7 @@
                 
                   <li class="nav-link">
               
-                    <a class="nav-link"  href="{% url 'profile-management' %}">Profile-managementt</a>
+                    <a class="nav-link"  href="{% url 'profile-management' %}">Profile-management</a>
         
                   </li>
                   
