created model, view, and rendered on dashboard for picture update

--- a/edenthought/journal/templates/journal/dashboard.html
+++ b/edenthought/journal/templates/journal/dashboard.html
@@ -7,6 +7,12 @@
     <h1>DASHBOARD</h1> Welcome back {{user}}
     <br>
     <br>
+
+    <img style="width:90px; height:70px" src="{{profilePic.profile_pic.url}}">
+
+    <br> <br>
+    <br>
+
     <a href='{% url 'user-logout' %}'>Logout here</a>
 </div>    
 
