--- a/edenthought/journal/templates/journal/dashboard.html
+++ b/edenthought/journal/templates/journal/dashboard.html
@@ -1,19 +1,21 @@
 {% extends "journal/navbar.html" %}
 
 {% block content %}
+
+    <head>
+        <title>Edenthought | Dashboard</title>
+    </head>
 <br>
 
 <div class="container bg-white shadow-md p-5 form-layout">
-    <h1>DASHBOARD</h1> Welcome back {{user}}
-    <br>
-    <br>
+    <h2>{{user}}</h2>
 
+    <p> Welcome, {{user}}! This is your dashboard.</p>
+   
     <img style="width:90px; height:70px" src="{{profilePic.profile_pic.url}}">
 
     <br> <br>
-    <br>
 
-    <a href='{% url 'user-logout' %}'>Logout here</a>
 </div>    
 
 {% endblock %}
