--- a/edenthought/journal/templates/journal/update-thought.html
+++ b/edenthought/journal/templates/journal/update-thought.html
@@ -3,6 +3,9 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+    <head>
+        <title>Edenthought | U/pdate thought</title>
+    </head>
 <br>
 
 <div class="container bg-white shadow-md p-5 form-layout">
@@ -17,7 +20,7 @@
             {{UpdateThought|crispy}}
 
             <br> <br>
-            <button class="btn btn-secondary btn-md w-100 btn-block p-2" type="submit"> Update thought </button>
+            <button class="btn btn-outline-primary btn-md w-100 btn-block p-2" type="submit"> Update thought </button>
 
         </form>
 </div>    
