--- a/edenthought/journal/templates/journal/delete-account.html
+++ b/edenthought/journal/templates/journal/delete-account.html
@@ -2,6 +2,9 @@
 
 
 {% block content %}
+    <head>
+        <title>Edenthought |Delete account</title>
+    </head>
 <br>
 
 <div class="container bg-white shadow-md p-5 form-layout">
@@ -13,7 +16,7 @@
             <form method='POST' autocomplete="off">
             {% csrf_token %}
 
-            <button class="btn btn-secondary btn-md w-100 btn-block p-2" type="submit"> Yes, delete account </button>
+            <button class="btn btn-outline-danger btn-md w-100 btn-block p-2" type="submit"> Yes, delete account </button>
 
         </form>
         <br>
