--- a/edenthought/journal/templates/journal/delete-thought.html
+++ b/edenthought/journal/templates/journal/delete-thought.html
@@ -2,6 +2,11 @@
 
 
 {% block content %}
+
+    <head>
+        <title>Edenthought | Delete thought</title>
+    </head>
+
 <br>
 
 <div class="container bg-white shadow-md p-5 form-layout">
