--- a/edenthought/journal/templates/journal/my-login.html
+++ b/edenthought/journal/templates/journal/my-login.html
@@ -10,7 +10,16 @@
 
          <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     </head>
+
+        {% for message in messages %}
+
+            {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}          
+                <p id="message-timer" class="alert alert-success float-center text-center message-text"> <i class="fa fa-check" aria-hidden="true"></i>&nbsp; {{message}} </p>
+            {% endif %}
+        {% endfor %}
     <br>
     <br>
 
@@ -21,12 +30,7 @@
         <br>
         <br>
 
-        {% for message in messages %}
 
-            {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}          
-                <p id="message-timer" class="alert alert-success float-center text-center message-text"> {{message}} </p>
-            {% endif %}
-        {% endfor %}
 
         <form method='POST' autocomplete="off">
             {% csrf_token %}
@@ -34,10 +38,18 @@
             {{LoginForm|crispy}}
 
             <br> <br>
-            <button class="btn btn-secondary btn-md w-100 btn-block p-2" type="submit"> Login </button>
+            <button class="btn btn-secondary btn-md w-100 btn-block p-2" type="submit"><i class="fa fa-key" aria-hidden="true"></i> &nbsp; Login </button>
 
         </form>
+
+            <br>
+        <div class="text-center">
+            <a href="{% url 'register' %}"> Don't have an account? </a>
+        </div>
         <br>
+        <div class="text-center">
+            <a href="{% url 'reset_password' %}">Forgotten your password? </a>
+        </div>
     </div>
     <script src="{% static 'js/app.js' %}"></script>
 </html>
