--- a/edenthought/journal/templates/journal/navbar.html
+++ b/edenthought/journal/templates/journal/navbar.html
@@ -3,6 +3,9 @@
 <html>
 
     <head>
+
+        
+
         <meta charset="utf-8" />
 
         <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1"/>
@@ -10,6 +13,9 @@
         <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/morph/bootstrap.min.css">
 
         <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     </head>
@@ -66,6 +72,14 @@
                   <li class="nav-link">
               
                     <a class="nav-link"  href="{% url 'profile-management' %}">Profile-management</a>
+        
+                  </li>
+
+                  &nbsp;     &nbsp;     &nbsp;   
+                
+                  <li class="nav-link">
+              
+                    <a class="nav-link"  href="{% url 'user-logout' %}"> Logout </a>
         
                   </li>
                   
