--- a/edenthought/journal/templates/journal/password-reset-complete.html
+++ b/edenthought/journal/templates/journal/password-reset-complete.html
@@ -1,11 +1,34 @@
+{% load static %}
+
+
 <html>
+    <head>
 
-    <h3> Password reset complete </h3>
+        <title>Edenthought | Password reset</title>
 
-    <p> Your password has been updated
-        You may go an login to your account.
-    </p>
+        <meta charset="utf-8" />
 
-    <a href="/"> Login </a>
+        <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1"/>
 
+        <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/morph/bootstrap.min.css">
+
+        <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+
+
+    </head>
+    <br>
+    <br>
+
+    <div class="container bg-white shadow-md p-5 form-layout">
+        <h3> Password reset complete </h3>
+          <br>
+        <p> Your password has been updated.
+            <br>
+            <br>
+            You may go ahead and login to your account.
+        </p>
+        <br>
+        <a class="btn btn-primary w-100" type="button"  href="{% url 'my-login' %}">Login</a>
+        
+    </div>
 </html>
