--- a/edenthought/journal/templates/journal/password-reset.html
+++ b/edenthought/journal/templates/journal/password-reset.html
@@ -1,15 +1,37 @@
+{% load static %}
+{% load crispy_forms_tags %}
+
 <html>
 
-    <h3> Password reset </h3>
+    <head>
+        <title>Edenthought | Password reset</title>
+        <meta charset="utf-8" />
 
-    <p>Forgot your password?</p>
+        <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1"/>
 
-    <form method="POST">
-        
-        {% csrf_token %}
+        <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/morph/bootstrap.min.css">
 
-        {{form}}
-        <input type="Submit" name="Send email">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 
-    </form>     
+
+    </head>
+    <br>
+    <br>
+    <div class="container bg-white shadow-md p-5 form-layout">
+        <h3> Password reset </h3>
+        <br>
+        <p>Forgot your password? <br><br> If so, please enter your email:</p>
+        <br>
+        <form method="POST" autocomplete="off">
+            
+            {% csrf_token %}
+
+            {{form|crispy}}
+
+            <br>
+
+            <input class="btn btn-primary btn-md w-100 btn-block p-2"  type="Submit" name="Send email" value="Send password reset email">
+
+        </form>     
+</div>
 </html>
