--- a/edenthought/journal/templates/journal/register.html
+++ b/edenthought/journal/templates/journal/register.html
@@ -5,7 +5,11 @@
         <title>Edenthought | Register</title>
          <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/morph/bootstrap.min.css">
 
+
+
          <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <br>
 
@@ -22,9 +26,12 @@
 
             <br> <br>
             
-            <button class="btn btn-secondary btn-md w-100 btn-block p-2" type="submit"> Create account</button>
+            <button class="btn btn-secondary btn-md w-100 btn-block p-2" type="submit"> <i class="fa fa-user-plus" aria-hidden="true"></i>&nbsp;  Create account</button>
         </form>
-
+        <br>
+        <div class="text-center">
+            <a href="{% url 'my-login' %}">Already have an account? </a>
+        </div>
     </div>
     <br>
 </html>
